# GW2Nexus-HappyReset

./: .gitignore  CHANGELOG.md  CMakeLists.txt  LICENSE  README.md
.github/: nexus-release.json
.github/workflows/: release.yml
scripts/: build-release.sh  deploy-to-gw2.sh  embed_assets.py
src/: entry.cpp
src/core/: AppState.cpp  AppState.h  Branding.h  SettingsStore.cpp  SettingsStore.h  Types.h
src/services/: ResetPersistence.cpp  ResetPersistence.h  ResetsWatcher.cpp  ResetsWatcher.h
src/ui/: BouncyChestPanel.cpp  BouncyChestPanel.h  CompassLayout.cpp  CompassLayout.h  DrawUtils.cpp  DrawUtils.h  OptionsPanel.cpp  OptionsPanel.h  TextureCatalog.cpp  TextureCatalog.h
src/utils/: GameBindHelper.cpp  GameBindHelper.h  MumbleIdentity.cpp  MumbleIdentity.h
